--- a/board/static/css/profile.scss
+++ b/board/static/css/profile.scss
@@ -56,7 +56,7 @@
 		height:30px; border-bottom:1px solid rgba($grey-90, .5); overflow:hidden; padding:5px 5% 0;
 		a {
 			height:0; border:8px solid transparent; border-top:0; border-bottom:30px solid rgba($grey-90, .6); display:inline-block; line-height:30px; margin:0 -6px; padding:0 15px; position:relative;
-			&.current { border-bottom-color:$blue; color:$white; z-index:10 }
+			&.current { border-bottom-color:$blue; color:$white; z-index:10; }
 			.no-touch &:hover { z-index:11; }
 		}
 	}
